# Firmware_OpenRemise

./: CMakeLists.txt  README.md  TODO.md  nvs.csv  sdkconfig.defaults
.github/workflows/: build.yml  static.yml  tests.yml
docs/: CMakeLists.txt  header.html
src/: CMakeLists.txt  app_main.cpp  config.hpp  doxygen.hpp  idf_component.yml  log.h  utility.cpp  utility.hpp
src/analog/: adc_task_function.cpp  convert.cpp  doxygen.hpp  init.cpp  init.hpp
src/dcc/: doxygen.hpp  init.cpp  init.hpp  loco.cpp  loco.hpp  locos.hpp  service.cpp  service.hpp
src/http/: doxygen.hpp  endpoints.hpp  message.hpp
src/http/ap/: init.cpp  server.cpp  service.cpp  service.hpp
src/http/sta/: init.cpp  service.cpp  service.hpp
src/mdu/: doxygen.hpp  firmware_service.cpp  init.cpp  init.hpp  service.cpp  service.hpp  zsu_service.cpp  zsu_service.hpp
src/mem/: doxygen.hpp
src/mem/nvs/: base.cpp  locos.cpp  settings.cpp  settings.hpp
src/ota/: doxygen.hpp  init.cpp  init.hpp  service.cpp  service.hpp
src/settings/: doxygen.hpp  init.cpp  service.cpp
src/sys/: doxygen.hpp  init.cpp  service.cpp  service.hpp
src/udp/: doxygen.hpp  init.cpp  init.hpp
src/usb/: doxygen.hpp  init.cpp  init.hpp  rx_task_function.cpp  rx_task_function.hpp
src/usb/dcc_ein/: rx_task_function.cpp  rx_task_function.hpp  task_function.cpp  task_function.hpp  tx_task_function.cpp
src/usb/decup_ein/: task_function.cpp  task_function.hpp
src/usb/susiv2/: rx_task_function.cpp  task_function.cpp  task_function.hpp  tx_task_function.cpp
src/wifi/: doxygen.hpp  init.cpp
src/z21/: doxygen.hpp  init.cpp  init.hpp  service.cpp  service.hpp
src/zusi/: doxygen.hpp  init.cpp  init.hpp  service.cpp  service.hpp
tests/usb/: usb.cpp
tests/usb/dcc_ein/: dcc_ein.cpp
tools/scripts/: mdu_firmware_api.py  sys_api.py  z21_api.py  zusi_api.py
